Issue #1219 - Migrate MetricsHub project from Java 17 to Java 25
Fixed Warning for unused variables and deprecated APIs in Java 25.